style(ui): restructure our solutions section into collapsibles

--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -213,6 +213,10 @@
             color:#fafafa;
         }
 
+        .solution-title{
+            color: var(--secondary-blue);
+        }
+
 
         /* Home - business approach section */
         .business-approach-section{
